--- a/project_password_generator_dasar.ipynb
+++ b/project_password_generator_dasar.ipynb
@@ -99,11 +99,11 @@
         "\n",
         "    if choices == 1:\n",
         "      all_characters = password_1\n",
-        "    if choices == 2:\n",
+        "    elif choices == 2:\n",
         "      all_characters = password_2\n",
-        "    if choices == 3:\n",
+        "    elif choices == 3:\n",
         "      all_characters = password_3\n",
-        "    if choices == 4:\n",
+        "    elif choices == 4:\n",
         "      all_characters = password_4\n",
         "    else:\n",
         "      print(\"Pilihan hanya angka 1-4\")\n",
